--- a/data/cards/02656842.yaml
+++ b/data/cards/02656842.yaml
@@ -26,7 +26,8 @@ text:
     Non puoi Evocare Specialmente mostri, eccetto mostri Insetto. Se questa carta viene Evocata Normalmente o Specialmente: puoi Evocare Specialmente 1 "Scarasoldato Scout Buggy" dalla tua mano, Deck o Cimitero. Puoi utilizzare questo effetto di "Scarasoldato Scout Buggy" una sola volta per turno.
   pt: |-
     Você não pode Invocar monstros por Invocação-Especial, exceto monstros Inseto. Se este card for Invocado por Invocação-Normal ou Especial: você pode Invocar por Invocação-Especial 1 "Buggy Batedor Bezoudado" da sua mão, do Deck ou do Cemitério. Você só pode usar este efeito de "Buggy Batedor Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合に発動できる。自分の手札・デッキ・墓地から「騎甲虫スカウト・バギー」１体を選んで特殊召喚する。②：このカードがモンスターゾーンに存在する限り、自分は昆虫族モンスターしか特殊召喚できない。
   ko:
   zh-TW:
   zh-CN: |-
@@ -109,7 +110,9 @@ sets:
   - set_number: WPP3-JP001
     set_name: World Premiere Pack 2022
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 816047
