--- a/data/cards/10851853.yaml
+++ b/data/cards/10851853.yaml
@@ -26,7 +26,8 @@ text:
     Non può essere Evocato Normalmente/Posizionato. Deve essere Evocato Specialmente dal suo stesso effetto. Puoi utilizzare ognuno dei seguenti effetti di "Dinofiore" una sola volta per turno. Se attivi una Carta Trappola o un suo effetto, o il tuo avversario attiva una Carta Magia o un suo effetto: puoi Evocare Specialmente questa carta dalla tua mano. Se questa carta viene mandata al Cimitero: puoi scegliere come bersaglio 3 Magie/Trappole bandite; mettile in fondo ai Deck appropriati in qualsiasi ordine, poi pesca 1 carta.
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Deve ser Invocado por Invocação-Especial por seu próprio efeito. Você só pode usar cada um dos seguintes efeitos de "Dinoflor" uma vez por turno. Se você ativar um Card de Armadilha ou seus efeitos, ou se seu oponente ativar um Card de Magia ou seus efeitos: você pode Invocar este card por Invocação-Especial da sua mão. Se este card for enviado para o Cemitério: você pode escolher 3 Magias/Armadilhas banidas; coloque-as no fundo dos Decks apropriados em qualquer ordem e, depois, compre 1 card.
-  ja:
+  ja: |-
+    このカードは通常召喚できず、このカードの効果でのみ特殊召喚できる。このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分が罠カードの効果を発動した場合、または相手が魔法カードの効果を発動した場合に発動できる。このカードを手札から特殊召喚する。②：このカードが墓地へ送られた場合、除外されている自分及び相手の魔法・罠カードの中から合計３枚を対象として発動できる。そのカードを好きな順番で持ち主のデッキの下に戻す。その後、自分はデッキから１枚ドローする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -67,7 +68,8 @@ sets:
   - set_number: WPP3-JP031
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848846
