--- a/data/cards/13234975.yaml
+++ b/data/cards/13234975.yaml
@@ -26,7 +26,8 @@ text:
     Evoca tramite Fusione 1 Mostro Fusione Insetto dal tuo Extra Deck, utilizzando mostri dalla tua mano o Terreno come Materiale da Fusione. Se questa carta è nel tuo Cimitero, eccetto nel turno in cui è stata mandata lì: puoi bandire 2 mostri Insetto dal tuo Cimitero; aggiungi questa carta alla tua mano. Puoi utilizzare questo effetto di "Atterraggio Scarasoldato" una sola volta per turno.
   pt: |-
     Invoque por Invocação-Fusão 1 Monstro de Fusão Inseto do seu Deck Adicional, usando monstros da sua mão ou do campo como Matéria de Fusão. Se este card estiver no seu Cemitério, exceto no turno em que foi enviado para lá: você pode banir 2 monstros Inseto do seu Cemitério; adicione este card à sua mão. Você só pode usar este efeito de "Aterrissagem Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の②の効果は１ターンに１度しか使用できない。①：自分の手札・フィールドから、昆虫族の融合モンスターカードによって決められた融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。②：自分の墓地から昆虫族モンスター２体を除外して発動できる。墓地のこのカードを手札に加える。この効果はこのカードが墓地へ送られたターンには発動できない。
   ko:
   zh-TW:
   zh-CN: |-
@@ -86,7 +87,8 @@ sets:
   - set_number: WPP3-JP012
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836301
