--- a/data/cards/14478717.yaml
+++ b/data/cards/14478717.yaml
@@ -26,7 +26,8 @@ text:
     Se controlli un mostro "Libromante": puoi scegliere come bersaglio 1 mostro scoperto controllato dal tuo avversario; in questo turno, quel mostro scoperto non può essere utilizzato come materiale per un'Evocazione tramite Fusione, Synchro, Xyz o Link. Puoi utilizzare questo effetto di "Prevenzione Libromante" una sola volta per turno. Una volta per turno, durante la End Phase, se non controlli nessun Mostro Rituale "Libromante": manda questa carta al Cimitero.
   pt: |-
     Se você controlar um monstro "Livromante": você pode escolher 1 monstro com a face para cima que seu oponente controla; neste turno, esse monstro com a face para cima não pode ser usado como matéria para uma Invocação-Fusão, Sincro, Xyz ou Link. Você só pode usar este efeito de "Prevenção Livromante" uma vez por turno. Uma vez por turno, durante a Fase Final, se você não controlar nenhum Monstro de Ritual "Livromante": envie este card para o Cemitério.
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：自分フィールドに「リブロマンサー」モンスターが存在する場合、相手フィールドの表側表示モンスター１体を対象として発動できる。このターン、その表側表示モンスターは融合・Ｓ・Ｘ・リンク召喚の素材にできない。②：自分・相手のエンドフェイズに、「リブロマンサー」儀式モンスターが自分フィールドに存在しない場合に発動する。このカードを墓地へ送る。
   ko:
   zh-TW:
   zh-CN: |-
@@ -65,7 +66,8 @@ sets:
   - set_number: WPP3-JP028
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 875964
