--- a/data/cards/18890039.yaml
+++ b/data/cards/18890039.yaml
@@ -26,7 +26,8 @@ text:
     Quando questa carta viene attivata: puoi aggiungere dal tuo Deck alla tua mano 1 mostro "Libromante" con un nome diverso dalle carte che controlli. Durante la tua Main Phase: puoi Evocare tramite Rituale 1 Mostro Rituale "Libromante" dalla tua mano, offrendo come Tributo mostri dalla tua mano o Terreno con Livello totale pari o superiore al suo Livello. Puoi attivare solo 1 "Prima Apparizione Libromante" per turno.
   pt: |-
     Quando este card for ativado: você pode adicionar 1 monstro "Livromante" do seu Deck à sua mão, com um nome diferente que o dos cards que você controla. Durante sua Fase Principal: você pode Invocar por Invocação-Ritual 1 Monstro de Ritual "Livromante" da sua mão, ao oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual ou exceda seu Nível. Você só pode ativar 1 "Primeira Aparição Livromante" por turno.
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、同名カードが自分フィールドに存在しない「リブロマンサー」モンスター１体をデッキから手札に加える事ができる。②：自分メインフェイズに発動できる。レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「リブロマンサー」儀式モンスター１体を儀式召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -65,7 +66,8 @@ sets:
   - set_number: WPP3-JP023
     set_name: World Premiere Pack 2022
     rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848520
