--- a/data/cards/19516687.yaml
+++ b/data/cards/19516687.yaml
@@ -26,7 +26,8 @@ text:
     Puoi rivelare 1 Mostro Rituale nella tua mano: Evoca Specialmente questa carta dalla tua mano. Puoi scegliere come bersaglio 1 carta "Libromante" nel tuo Cimitero, eccetto "Libromante Agente"; aggiungila alla tua mano, poi, se hai aggiunto una Magia/Trappola con questo effetto, metti 1 carta dalla tua mano in fondo al Deck. Puoi utilizzare ogni effetto di "Libromante Agente" una sola volta per turno.
   pt: |-
     Você pode revelar 1 Monstro de Ritual na sua mão: Invoque este card por Invocação-Especial da sua mão. Você pode escolher 1 card "Livromante" no seu Cemitério, exceto "Agente Livromante"; adicione-o à sua mão e, depois, se você adicionou uma Magia/Armadilha por este efeito, coloque 1 card da sua mão no fundo do Deck. Você só pode usar cada efeito de "Agente Livromante" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札の儀式モンスター１体を相手に見せて発動できる。このカードを手札から特殊召喚する。②：「リブロマンサー・エージェント」以外の自分の墓地の「リブロマンサー」カード１枚を対象として発動できる。そのカードを手札に加える。この効果で魔法・罠カードを手札に加えた場合、さらに自分の手札を１枚選んでデッキの一番下に戻す。
   ko:
   zh-TW:
   zh-CN: |-
@@ -72,5 +73,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848963
