--- a/data/cards/45001322.yaml
+++ b/data/cards/45001322.yaml
@@ -26,7 +26,8 @@ text:
     Puoi Evocare tramite Rituale questa carta con una carta "Libromante". Se questa carta viene Evocata tramite Rituale utilizzando uno o più mostri sul Terreno, essa non può essere distrutta, o bandita, dagli effetti delle carte. Guadagna 200 ATK/DEF ogni volta che il tuo avversario attiva una carta o un effetto, mentre controlli questa carta con ATK inferiore a 3000 nella Zona Mostri.
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com um card "Livromante". Se este card for Invocado por Invocação-Ritual ao usar um ou mais monstros no campo, ele não pode ser destruído, ou banido, por efeitos de card. Ganha 200 de ATK/DEF sempre que seu oponente ativar um card ou efeito enquanto você controlar este card com ATK menor que 3000 na Zona de Monstros.
-  ja:
+  ja: |-
+    「リブロマンサー」カードにより降臨。①：フィールドのモンスターを使用して儀式召喚したこのカードは、効果では破壊されず、効果では除外できない。②：攻撃力３０００未満のこのカードがモンスターゾーンに存在する限り、相手がカードの効果を発動する度に、このカードの攻撃力・守備力は２００アップする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -69,7 +70,8 @@ sets:
   - set_number: WPP3-JP019
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848935
