--- a/data/cards/50855622.yaml
+++ b/data/cards/50855622.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     4 monstros Inseto
     Depois que este card for Invocado por Invocação-Fusão, ele não é afetado por outros efeitos de card até o final do seu próximo turno. No final da Fase de Batalha: você pode escolher 1 monstro Inseto com 3000 ou menos de ATK no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar este efeito de "Hércules Absoluto Ultrabezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    昆虫族モンスター×４
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが融合召喚に成功した場合、このカードは次の自分ターンの終了時まで他のカードの効果を受けない。②：自分・相手のバトルフェイズ終了時に、自分の墓地の攻撃力３０００以下の昆虫族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -101,5 +103,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836295
