--- a/data/cards/53923690.yaml
+++ b/data/cards/53923690.yaml
@@ -26,7 +26,8 @@ text:
     Scegli come bersaglio 1 Carta Mostro scoperta nella tua Zona Magie & Trappole e 2 carte controllate dal tuo avversario; distruggile.
   pt: |-
     Escolha 1 Card de Monstro com a face para cima na sua Zona de Magias & Armadilhas e 2 cards que seu oponente controla; destrua-os.
-  ja:
+  ja: |-
+    ①：自分の魔法＆罠ゾーンの表側表示のモンスターカード１枚と相手フィールドのカード２枚を対象として発動できる。そのカードを破壊する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -63,7 +64,8 @@ sets:
   - set_number: WPP3-JP048
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 876711
