--- a/data/cards/54656181.yaml
+++ b/data/cards/54656181.yaml
@@ -26,7 +26,8 @@ text:
     Quando questa carta viene Evocata Normalmente: puoi Evocare Specialmente 2 mostri Guerriero di Livello 4 o inferiore con nomi diversi dalla tua mano in Posizione di Difesa.
   pt: |-
     Quando este card for Invocado por Invocação-Normal: você pode Invocar por Invocação-Especial 2 monstros Guerreiro de Nível 4 ou menos com nomes diferentes da sua mão em Posição de Defesa.
-  ja:
+  ja: |-
+    ①：このカードが召喚に成功した時に発動できる。手札からレベル４以下の戦士族モンスター２体を守備表示で特殊召喚する（同名カードは１枚まで）。
   ko:
   zh-TW:
   zh-CN: |-
@@ -70,5 +71,5 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 876712
