--- a/data/cards/57946551.yaml
+++ b/data/cards/57946551.yaml
@@ -26,7 +26,8 @@ text:
     Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 altro mostro scoperto sul Terreno; equipaggia quel mostro scoperto a questa carta. All'inizio del Damage Step, se questa carta combatte con un mostro dell'avversario con lo stesso Tipo e Attributo della Carta Mostro equipaggiata dall'effetto di questa carta: puoi distruggere quel mostro dell'avversario. Puoi utilizzare ogni effetto di "Scaglie Roccia" una sola volta per turno.
   pt: |-
     Se este card for Invocado por Invocação-Especial: você pode escolher 1 outro monstro com a face para cima no campo; equipe esse monstro com a face para cima a este card. No começo da Etapa de Dano, se este card batalhar um monstro do oponente com o mesmo Tipo e Atributo que o do Card de Monstro equipado pelo efeito deste card: você pode destruir esse monstro do oponente. Você só pode usar cada efeito de "Escamas Rochosas" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、このカード以外のフィールドの表側表示モンスター１体を対象として発動できる。その表側表示モンスターを装備カード扱いとしてこのカードに装備する。②：種族・属性がこのカードの効果で装備したモンスターカードと同じとなる相手モンスターとこのカードが戦闘を行うダメージステップ開始時に発動できる。その相手モンスターを破壊する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -70,5 +71,5 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848836
