--- a/data/cards/65430555.yaml
+++ b/data/cards/65430555.yaml
@@ -26,7 +26,8 @@ text:
     Durante la Main Phase (Effetto Rapido): puoi scegliere come bersaglio 1 mostro Insetto nel tuo Cimitero e 1 mostro nel Cimitero del tuo avversario; Evoca Specialmente questa carta dalla tua mano e, se lo fai, metti i mostri scelti come bersaglio in fondo ai Deck. Se questa carta viene Evocata Normalmente o Specialmente: puoi aggiungere 1 Magia/Trappola "Scarasoldato" dal tuo Deck alla tua mano. Puoi utilizzare ogni effetto di "Scarasoldato Pungiglione Lanciere" una sola volta per turno.
   pt: |-
     Durante a Fase Principal (Efeito Rápido): você pode escolher 1 monstro Inseto no seu Cemitério e 1 monstro no Cemitério do seu oponente; Invoque este card por Invocação-Especial da sua mão e, se isso acontecer, coloque os monstros alvo no fundo dos Decks. Se este card for Invocado por Invocação-Normal ou Especial: você pode adicionar 1 Magia/Armadilha "Bezoudado" do seu Deck à sua mão. Você só pode usar cada efeito de "Lanceiro Agulha Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分・相手のメインフェイズに、自分の墓地の昆虫族モンスター１体と相手の墓地のモンスター１体を対象として発動できる。このカードを手札から特殊召喚し、対象のモンスターを持ち主のデッキの一番下に戻す。②：このカードが召喚・特殊召喚に成功した場合に発動できる。デッキから「ビートルーパー」魔法・罠カード１枚を手札に加える。
   ko:
   zh-TW:
   zh-CN: |-
@@ -89,7 +90,9 @@ sets:
   - set_number: WPP3-JP005
     set_name: World Premiere Pack 2022
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 823980
