--- a/data/cards/71406430.yaml
+++ b/data/cards/71406430.yaml
@@ -26,7 +26,8 @@ text:
     Puoi Evocare tramite Rituale questa carta con una carta "Libromante". Se questa carta viene Evocata tramite Rituale utilizzando uno o più mostri sul Terreno, essa può attaccare direttamente. Puoi utilizzare ognuno dei seguenti effetti di "Libromante Doombroker" una sola volta per turno. Durante la tua Main Phase: puoi Posizionare 1 Trappola "Libromante" direttamente dal tuo Deck. Quando questa carta infligge danno da combattimento al tuo avversario: puoi scegliere come bersaglio 1 mostro scoperto controllato dal tuo avversario; mischialo nel Deck.
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com um card "Livromante". Se este card for Invocado por Invocação-Ritual ao usar um ou mais monstros no campo, ele pode atacar diretamente. Você só pode usar cada um dos seguintes efeitos de "Doombroker Livromante" uma vez por turno. Durante sua Fase Principal: você pode Baixar 1 Armadilha "Livromante" diretamente do seu Deck. Quando este card causar dano de batalha ao seu oponente: você pode escolher 1 monstro com a face para cima que seu oponente controla; embaralhe-o no Deck.
-  ja:
+  ja: |-
+    「リブロマンサー」カードにより降臨。このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：フィールドのモンスターを使用して儀式召喚したこのカードは直接攻撃できる。②：自分メインフェイズに発動できる。デッキから「リブロマンサー」罠カード１枚を選んで自分の魔法＆罠ゾーンにセットする。③：このカードが相手に戦闘ダメージを与えた時、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターを持ち主のデッキに戻す。
   ko:
   zh-TW:
   zh-CN: |-
@@ -73,5 +74,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848961
