--- a/data/cards/80040886.yaml
+++ b/data/cards/80040886.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     1 Regulador + 1+ monstros não-Reguladores
     Se este card for Invocado por Invocação-Especial: você pode escolher cards com a face para cima que seu oponente controla, até o número de Reguladores no seu Cemitério; negue seus efeitos até o final deste turno. Se este card Invocado por Invocação-Sincro for destruído por um efeito de card e enviado para o Cemitério: você pode escolher 1 Regulador no seu Cemitério; adicione-o à sua mão.
-  ja:
+  ja: |-
+    チューナー＋チューナー以外のモンスター１体以上
+    ①：このカードが特殊召喚に成功した場合、自分の墓地のチューナーの数まで相手フィールドの表側表示のカードを対象として発動できる。そのカードの効果をターン終了時まで無効にする。②：Ｓ召喚したこのカードが効果で破壊され墓地へ送られた場合、自分の墓地のチューナー１体を対象として発動できる。そのモンスターを手札に加える。
   ko:
   zh-TW:
   zh-CN: |-
@@ -79,5 +81,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 875645
