--- a/data/cards/83340560.yaml
+++ b/data/cards/83340560.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     2 Monstros que não sejam de Efeito
     Ganha ATK igual ao ATK original combinado de quaisquer Monstros de Ritual, de Fusão, Sincro, Xyz ou Link usados como Matéria de Fusão para este card. Este card pode atacar diretamente. Se este card for destruído em batalha ou por um efeito de card: você pode escolher 1 dos seus Monstros que não sejam de Efeito que estiverem banidos ou no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar este efeito de "O Elenco Duplo do Grande Conjurador" uma vez por turno.
-  ja:
+  ja: |-
+    効果モンスター以外のモンスター×２
+    このカード名の③の効果は１ターンに１度しか使用できない。①：このカードの攻撃力は、このカードの融合素材とした儀式・融合・Ｓ・Ｘ・リンクモンスターの元々の攻撃力の合計分アップする。②：このカードは直接攻撃できる。③：このカードが戦闘・効果で破壊された場合、自分の墓地のモンスター及び除外されている自分のモンスターの中から、効果モンスター以外のモンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -78,5 +80,5 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848871
