--- a/data/cards/88083109.yaml
+++ b/data/cards/88083109.yaml
@@ -26,7 +26,8 @@ text:
     Scegli come bersaglio 1 mostro "Libromante" che controlli e 1 mostro controllato dal tuo avversario; fai ritornare il tuo mostro nella mano e, se lo fai, prendi il controllo di quel mostro dell'avversario. Se il tuo mostro "Libromante" che hai scelto come bersaglio non era un Mostro Rituale, il mostro di cui hai preso il controllo ritorna nella mano durante la End Phase. Puoi attivare solo 1 "Dislocazione Libromante" per turno.
   pt: |-
     Escolha 1 monstro "Livromante" que você controla e 1 monstro que seu oponente controla; devolva seu monstro para a mão e, se isso acontecer, tome o controle desse monstro do oponente. Se seu monstro "Livromante" que você escolheu como alvo não era um Monstro de Ritual, o monstro que você tomou o controle volta para a mão durante a Fase Final. Você só pode ativar 1 "Deslocamento Livromante" por turno.
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：自分フィールドの「リブロマンサー」モンスター１体と相手フィールドのモンスター１体を対象として発動できる。その自分のモンスターを持ち主の手札に戻し、その相手モンスターのコントロールを得る。儀式モンスター以外の自分のモンスターを対象としてこのカードを発動した場合、この効果でコントロールを得たモンスターはエンドフェイズに持ち主の手札に戻る。
   ko:
   zh-TW:
   zh-CN: |-
@@ -65,7 +66,8 @@ sets:
   - set_number: WPP3-JP027
     set_name: World Premiere Pack 2022
     rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 876178
