--- a/data/cards/01712616.yaml
+++ b/data/cards/01712616.yaml
@@ -26,7 +26,8 @@ text:
     Quando il tuo avversario attiva l'effetto di un mostro, mentre tu controlli un mostro "Scarasoldato": annulla l'attivazione e, se lo fai, distruggilo. Durante la tua End Phase, se questa carta è nel tuo Cimitero e tu controlli un mostro Insetto con ATK 3000 o superiore: puoi bandire 1 mostro Insetto dal tuo Cimitero; Posiziona questa carta. Puoi utilizzare solo 1 effetto di "Vola e Pungi Scarasoldati" per turno, e solo una volta in quel turno.
   pt: |-
     Quando seu oponente ativar um efeito de monstro, enquanto você controlar um monstro "Bezoudado": negue a ativação e, se isso acontecer, destrua-o. Durante sua Fase Final, se este card estiver no seu Cemitério e você controlar um monstro Inseto com 3000 ou mais de ATK: você pode banir 1 monstro Inseto do seu Cemitério; Baixe este card. Você só pode usar 1 efeito de "Voar & Picar dos Bezoudados" por turno e apenas uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果は１ターンに１度、いずれか１つしか使用できない。①：自分フィールドに「ビートルーパー」モンスターが存在し、相手がモンスターの効果を発動した時に発動できる。その発動を無効にし破壊する。②：このカードが墓地に存在し、自分フィールドに攻撃力３０００以上の昆虫族モンスターが存在する場合、自分エンドフェイズに自分の墓地から昆虫族モンスター１体を除外して発動できる。このカードを自分フィールドにセットする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -85,7 +86,8 @@ sets:
   - set_number: WPP3-JP013
     set_name: World Premiere Pack 2022
     rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 823972
