--- a/data/cards/03779493.yaml
+++ b/data/cards/03779493.yaml
@@ -33,8 +33,8 @@ text:
     "Feiticeiro do Fim da Noite" + 1+ monstros não-Reguladores
     Se este card for Invocado por Invocação-Especial, ou se um ou mais outros monstros Mago forem Invocados por Invocação-Especial no seu campo: você pode escolher 1 card no Cemitério do seu oponente; bana-o. Se este card for destruído em batalha, ou se este card na Zona de Monstros do seu dono for destruído por um efeito de card do oponente: você pode escolher 1 monstro Mago de Nível 4 ou menos no seu Cemitério; Invoque-o por Invocação-Especial. Você só pode usar este efeito de "Administrador do Fim da Noite" uma vez por turno.
   ja: |-
-    「ナイトエンド・ソーサラー」＋チューナー<ruby>以<rt>い</rt></ruby><ruby>外<rt>がい</rt></ruby>のモンスター1<ruby>体<rt>たい</rt></ruby><ruby>以<rt>い</rt></ruby><ruby>上<rt>じょう</rt></ruby>
-    このカード名の②の効果は1ターンに1度しか使用できない。①：このカードが特殊召喚に成功した場合、または自分フィールドにこのカード以外の魔法使い族モンスターが特殊召喚された場合、相手の墓地のカード1枚を対象として発動できる。そのカードを除外する。②：モンスターゾーンのこのカードが戦闘または相手の効果で破壊された場合、自分の墓地のレベル4以下の魔法使い族モンスター1体を対象として発動できる。 そのモンスターを特殊召喚する。
+    「ナイトエンド・ソーサラー」＋チューナー以外のモンスター１体以上
+    このカード名の②の効果は１ターンに１度しか使用できない。①：このカードが特殊召喚に成功した場合、または自分フィールドにこのカード以外の魔法使い族モンスターが特殊召喚された場合、相手の墓地のカード１枚を対象として発動できる。そのカードを除外する。②：モンスターゾーンのこのカードが戦闘または相手の効果で破壊された場合、自分の墓地のレベル４以下の魔法使い族モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -73,7 +73,12 @@ sets:
     set_name: Dawn of Majesty
     rarities:
     - Super Rare
+  ja:
+  - set_number: WPP3-JP040
+    set_name: World Premiere Pack 2022
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 823974
