--- a/data/cards/11587414.yaml
+++ b/data/cards/11587414.yaml
@@ -26,7 +26,8 @@ text:
     Quando questa carta viene attivata: aggiungi 1 "Drago Alato di Ra" o 1 carta che lo menziona dal tuo Deck alla tua mano, eccetto "La Vera Divinità del Sole". I mostri, eccetto "Drago Alato di Ra", non possono attaccare nel turno in cui vengono Evocati Specialmente. Una volta per turno, durante la tua Main Phase: puoi mandare questa carta dal Terreno, o 1 "Drago Alato di Ra - Fenice della Divinità Egizia" dal tuo Deck, al Cimitero, poi manda 1 "Drago Alato di Ra" dalla tua Zona Mostri al Cimitero. Puoi attivare solo 1 "La Vera Divinità del Sole" per turno.
   pt: |-
     Quando este card for ativado: adicione 1 "O Dragão Alado de Rá" ou 1 card que o mencione do seu Deck à sua mão, exceto "O Verdadeiro Deus Sol". Monstros, exceto "O Dragão Alado de Rá", não podem atacar no turno em que forem Invocados por Invocação-Especial. Uma vez por turno, durante sua Fase Principal: você pode enviar para o Cemitério este card do campo, ou 1 "Dragão Alado de Rá - Fênix" do seu Deck e, depois, envie 1 "O Dragão Alado de Rá" da sua Zona de Monstros para o Cemitério. Você só pode ativar 1 "O Verdadeiro Deus Sol" por turno.
-  ja:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。①：このカードの発動時の効果処理として、「真なる太陽神」を除く、「ラーの翼神竜」１体またはそのカード名が記されたカード１枚をデッキから手札に加える。②：「ラーの翼神竜」以外の特殊召喚されたモンスターは、そのターンには攻撃できない。③：１ターンに１度、自分メインフェイズに発動できる。このカードまたはデッキの「ラーの翼神竜－不死鳥」１体を墓地へ送る。その後、自分フィールドの「ラーの翼神竜」１体を選んで墓地へ送る。
   ko:
   zh-TW:
   zh-CN:
@@ -66,5 +67,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 897304
