--- a/data/cards/14357527.yaml
+++ b/data/cards/14357527.yaml
@@ -26,7 +26,8 @@ text:
     Non può essere Evocato Normalmente/Posizionato. Deve prima essere Evocato Specialmente (dalla tua mano) mischiando 3 dei tuoi mostri Insetto banditi nel Main Deck. Durante la Main Phase, se questa carta sotto il controllo del suo proprietario viene distrutta o bandita dall'effetto di una carta dell'avversario: puoi Evocare Specialmente questa carta. Puoi utilizzare questo effetto di "Scarasoldato Pesante Potente Neptune" una sola volta per turno. Una volta per turno, durante la End Phase: puoi scegliere come bersaglio 1 altro mostro Insetto che controlli; esso guadagna 1000 ATK.
   pt: |-
     Não pode ser Invocado por Invocação-Normal/Baixado. Primeiro deve ser Invocado por Invocação-Especial (da sua mão) ao embaralhar 3 dos seus monstros Inseto banidos no Deck Principal. Durante a Fase Principal, se este card sob o controle do seu dono for destruído ou banido por um efeito de card do oponente: você pode Invocar este card por Invocação-Especial. Você só pode usar este efeito de "Netuno Poderoso Bezoudado Pesado" uma vez por turno. Uma vez por turno, durante a Fase Final: você pode escolher 1 outro monstro Inseto que você controla; ele ganha 1000 de ATK.
-  ja:
+  ja: |-
+    このカードは通常召喚できない。除外されている自分の昆虫族モンスター３体をデッキに戻した場合に特殊召喚できる。このカード名の②の効果は１ターンに１度しか使用できない。①：エンドフェイズに、このカード以外の自分フィールドの昆虫族モンスター１体を対象として発動できる。そのモンスターの攻撃力は１０００アップする。②：自分・相手のメインフェイズに、フィールドのこのカードが相手の効果で、破壊された場合または除外された場合に発動できる。このカードを特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -94,5 +95,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836300
