--- a/data/cards/20295753.yaml
+++ b/data/cards/20295753.yaml
@@ -26,7 +26,8 @@ text:
     Se questa carta viene mandata al Cimitero dall'effetto di una carta: puoi Evocare Specialmente questa carta, ma bandiscila quando lascia il Terreno. Puoi utilizzare questo effetto di "Serpente Spada della Notte" una sola volta per turno.
   pt: |-
     Se este card for enviado para o Cemitério por um efeito de card: você pode Invocar este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar este efeito de "Serpente da Espada Noturna" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の効果は１ターンに１度しか使用できない。①：このカードが効果で墓地へ送られた場合に発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko:
   zh-TW:
   zh-CN: |-
@@ -88,7 +89,8 @@ sets:
   - set_number: WPP3-JP034
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836291
