--- a/data/cards/26435595.yaml
+++ b/data/cards/26435595.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     2 Monstros Pêndulo
     Se este card na Zona de Monstros for destruído: você pode colocar este card na sua Zona de Pêndulo.
-  ja:
+  ja: |-
+    Ｐモンスター×２
+    ①：モンスターゾーンのこのカードが破壊された場合に発動できる。このカードを自分のＰゾーンに置く。
   ko:
   zh-TW:
   zh-CN:
@@ -56,7 +58,8 @@ pendulum_effect:
     Se non hai nessuna carta nella tua altra Zona Pendulum: puoi mettere 1 Mostro Pendulum scoperto dal tuo Extra Deck nella tua Zona Pendulum. Puoi utilizzare questo effetto di "Patissciel Couverture" una sola volta per turno.
   pt: |-
     Se você não tiver cards na sua outra Zona de Pêndulo: você pode colocar 1 Monstro Pêndulo com a face para cima do seu Deck Adicional na sua Zona de Pêndulo. Você só pode usar este efeito de "Patissciel Couverture" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名のＰ効果は１ターンに１度しか使用できない。①：もう片方の自分のＰゾーンにカードが存在しない場合に発動できる。自分のＥＸデッキから表側表示のＰモンスター１体を選んで自分のＰゾーンに置く。
   ko:
   zh-TW:
   zh-CN:
@@ -99,5 +102,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 875652
