--- a/data/cards/38229962.yaml
+++ b/data/cards/38229962.yaml
@@ -50,7 +50,9 @@ text:
     ● Invoque por Invocação-Especial 1 monstro "Bezoudado" do seu Deck.
     ● Este card ganha 2000 de ATK até o final deste turno.
     Você só pode usar este efeito de "Atlas Invencível Bezoudado Gigante" uma vez por turno.
-  ja:
+  ja: |-
+    昆虫族モンスター２体以上
+    このカード名の③の効果は１ターンに１度しか使用できない。①：リンク召喚したこのカードは攻撃力が３０００以下の場合、相手の効果の対象にならず、相手の効果では破壊されない。②：このカードがモンスターゾーンに存在する限り、自分は昆虫族モンスターしか特殊召喚できない。③：自分フィールドの昆虫族モンスター１体をリリースし、以下の効果から１つを選択して発動できる。●デッキから「ビートルーパー」モンスター１体を特殊召喚する。●このカードの攻撃力はターン終了時まで２０００アップする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -125,5 +127,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 823979
