--- a/data/cards/39041550.yaml
+++ b/data/cards/39041550.yaml
@@ -26,7 +26,8 @@ text:
     Se uno o più mostri Insetto vengono Evocati Normalmente o Specialmente sul tuo Terreno (eccetto durante il Damage Step): puoi Evocare Specialmente questa carta dalla tua mano. Quando un mostro controllato dal tuo avversario attiva il suo effetto (Effetto Rapido): puoi offrire come Tributo 1 mostro Insetto; distruggilo. Puoi utilizzare ogni effetto di "Scarasoldato Scaglia Bombardiere" una sola volta per turno.
   pt: |-
     Se um ou mais monstros Inseto forem Invocados por Invocação-Normal ou Especial no seu campo (exceto durante a Etapa de Dano): você pode Invocar este card por Invocação-Especial da sua mão. Quando um monstro que seu oponente controla ativar seu efeito (Efeito Rápido): você pode oferecer como Tributo 1 monstro Inseto; destrua-o. Você só pode usar cada efeito de "Bombardeiro Escama Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分フィールドに昆虫族モンスターが召喚・特殊召喚された場合に発動できる。このカードを手札から特殊召喚する。②：相手がフィールドのモンスターの効果を発動した時、自分フィールドの昆虫族モンスター１体をリリースして発動できる。そのモンスターを破壊する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -92,5 +93,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 823976
