--- a/data/cards/46123974.yaml
+++ b/data/cards/46123974.yaml
@@ -26,7 +26,8 @@ text:
     Puoi rivelare 1 Mostro Rituale nella tua mano; Evoca Specialmente questa carta dalla tua mano. Se questa carta viene Evocata Specialmente: puoi aggiungere 1 Magia "Libromante" dal tuo Deck alla tua mano. Puoi utilizzare ogni effetto di "Libromante Ragazzo Secchione" una sola volta per turno.
   pt: |-
     Você pode revelar 1 Monstro de Ritual na sua mão; Invoque este card por Invocação-Especial da sua mão. Se este card for Invocado por Invocação-Especial: você pode adicionar 1 Magia "Livromante" do seu Deck à sua mão. Você só pode usar cada efeito de "Garoto Geek Livromante" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札の儀式モンスター１体を相手に見せて発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚に成功した場合に発動できる。デッキから「リブロマンサー」魔法カード１枚を手札に加える。
   ko:
   zh-TW:
   zh-CN: |-
@@ -91,7 +92,9 @@ sets:
   - set_number: WPP3-JP015
     set_name: World Premiere Pack 2022
     rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 844214
