--- a/data/cards/48784854.yaml
+++ b/data/cards/48784854.yaml
@@ -26,7 +26,8 @@ text:
     Se un mostro viene Evocato tramite Rituale, Fusione, Synchro o Xyz mentre un mostro con lo stesso tipo di carta (Rituale, Fusione, Synchro o Xyz) è sul Terreno: puoi pescare 1 carta. Puoi utilizzare questo effetto di "Retaggio della Luce" una sola volta per turno.
   pt: |-
     Se um monstro for Invocado por Invocação-Ritual, Fusão, Sincro ou Xyz, enquanto um monstro com o mesmo tipo de card (Ritual, Fusão, Sincro ou Xyz) estiver no campo: você pode comprar 1 card. Você só pode usar este efeito de "Herança da Luz" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。①：既にフィールドに存在するモンスターと同じ種類（儀式・融合・Ｓ・Ｘ）のモンスターが儀式・融合・Ｓ・Ｘ召喚された場合に発動できる。自分はデッキから１枚ドローする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -87,5 +88,5 @@ sets:
     - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836298
