--- a/data/cards/51578214.yaml
+++ b/data/cards/51578214.yaml
@@ -26,7 +26,8 @@ text:
     Puoi Evocare Specialmente questa carta (dalla tua mano) bandendo 1 mostro Insetto dal tuo Cimitero. Puoi Evocare Specialmente "Scarasoldato Rotolatore d'Assalto" una sola volta per turno in questo modo. Guadagna 200 ATK per ogni mostro Insetto che controlli, eccetto questa carta. Quando questa carta viene distrutta in battaglia: puoi aggiungere 1 mostro "Scarasoldato" dal tuo Deck alla tua mano, eccetto "Scarasoldato Rotolatore d'Assalto". Puoi utilizzare questo effetto di "Scarasoldato Rotolatore d'Assalto" una sola volta per turno.
   pt: |-
     Você pode Invocar este card por Invocação-Especial (da sua mão) ao banir 1 monstro Inseto do seu Cemitério. Você só pode Invocar "Rolador de Assalto Bezoudado" por Invocação-Especial uma vez por turno desta forma. Ganha 200 de ATK para cada monstro Inseto que você controla, exceto este card. Quando este card for destruído em batalha: você pode adicionar 1 monstro "Bezoudado" do seu Deck à sua mão, exceto "Rolador de Assalto Bezoudado". Você só pode usar este efeito de "Rolador de Assalto Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の、①の方法による特殊召喚は１ターンに１度しかできず、③の効果は１ターンに１度しか使用できない。①：このカードは自分の墓地の昆虫族モンスター１体を除外し、手札から特殊召喚できる。②：このカードの攻撃力は、自分フィールドの他の昆虫族モンスターの数×２００アップする。③：このカードが戦闘で破壊された時に発動できる。デッキから「騎甲虫アサルト・ローラー」以外の「ビートルーパー」モンスター１体を手札に加える。
   ko:
   zh-TW:
   zh-CN: |-
@@ -91,7 +92,8 @@ sets:
   - set_number: WPP3-JP003
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836115
