--- a/data/cards/52707042.yaml
+++ b/data/cards/52707042.yaml
@@ -26,7 +26,8 @@ text:
     Puoi Evocare tramite Rituale questa carta con una carta "Libromante". Se questa carta è stata Evocata tramite Rituale utilizzando uno o più mostri sul Terreno, il tuo avversario non può scegliere come bersaglio i Mostri Rituale che controlli con gli effetti dei mostri. Se questa carta viene Evocata Specialmente: puoi scegliere come bersaglio 1 mostro scoperto controllato dal tuo avversario; fino alla fine di questo turno, cambia il suo ATK a 0, inoltre annulla i suoi effetti. Puoi utilizzare questo effetto di "Libromante Mystiragazza" una sola volta per turno.
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com um card "Livromante". Se este card foi Invocado por Invocação-Ritual usando um ou mais monstros no campo, seu oponente não pode escolher Monstros de Ritual que você controla como alvo de efeitos de monstro. Se este card for Invocado por Invocação-Especial: você pode escolher 1 monstro com a face para cima que seu oponente controla; até o final deste turno, mude o ATK dele para 0 e, além disso, negue seus efeitos. Você só pode usar este efeito de "Mistigarota Livromante" uma vez por turno.
-  ja:
+  ja: |-
+    「リブロマンサー」カードにより降臨。このカード名の②の効果は１ターンに１度しか使用できない。①：フィールドのモンスターを使用して儀式召喚したこのカードがモンスターゾーンに存在する限り、自分フィールドの儀式モンスターは相手モンスターの効果の対象にならない。②：このカードが特殊召喚に成功した場合、相手フィールドの表側表示モンスター１体を対象として発動できる。そのモンスターはターン終了時まで、攻撃力が０になり、効果は無効化される。
   ko:
   zh-TW:
   zh-CN: |-
@@ -72,5 +73,5 @@ sets:
     - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 875966
