--- a/data/cards/64213017.yaml
+++ b/data/cards/64213017.yaml
@@ -26,7 +26,8 @@ text:
     Puoi scegliere come bersaglio 1 mostro "Scarasoldato" nel tuo Cimitero; Evocalo Specialmente, ma esso non può attaccare in questo turno, inoltre perdi LP pari al suo ATK originale. Se uno o più mostri Insetto scoperti che controlli vengono distrutti in battaglia o dall'effetto di una carta: puoi Evocare Specialmente 1 "Segna-Scarasoldato" (Insetto/TERRA/Livello 3/ATK 1000/DEF 1000). Puoi utilizzare ogni effetto di "Formazione Scarasoldati" una sola volta per turno.
   pt: |-
     Você pode escolher 1 monstro "Bezoudado" no seu Cemitério; Invoque-o por Invocação-Especial, mas ele não pode atacar neste turno e, além disso, você perde PV igual ao ATK original dele. Se um ou mais monstros Inseto com a face para cima que você controla forem destruídos em batalha ou por um efeito de card: você pode Invocar por Invocação-Especial 1 "Ficha de Bezoudado" (Inseto/TERRA/Nível 3/ATK 1000/DEF 1000). Você só pode usar cada efeito de "Formação Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：自分の墓地の「ビートルーパー」モンスター１体を対象として発動できる。そのモンスターを特殊召喚し、自分はそのモンスターの元々の攻撃力分のＬＰを失う。この効果で特殊召喚したモンスターはこのターン攻撃できない。②：自分フィールドの表側表示の昆虫族モンスターが戦闘・効果で破壊された場合に発動できる。自分フィールドに「騎甲虫トークン」（昆虫族・地・星３・攻／守１０００）１体を特殊召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -85,7 +86,8 @@ sets:
   - set_number: WPP3-JP010
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 823982
