--- a/data/cards/82128978.yaml
+++ b/data/cards/82128978.yaml
@@ -26,7 +26,8 @@ text:
     Puoi rivelare 1 Mostro Rituale nella tua mano: Evoca Specialmente questa carta dalla tua mano. Durante il turno del tuo avversario (Effetto Rapido): puoi Evocare tramite Rituale 1 Mostro Rituale "Libromante" dalla tua mano, offrendo come Tributo mostri dalla tua mano o Terreno con Livello totale pari o superiore al suo Livello. Puoi utilizzare ogni effetto di "Libromante Magiragazza" una sola volta per turno.
   pt: |-
     Você pode revelar 1 Monstro de Ritual na sua mão: Invoque este card por Invocação-Especial da sua mão. Durante o turno do seu oponente (Efeito Rápido): você pode Invocar por Invocação-Ritual 1 Monstro de Ritual "Livromante" da sua mão, ao oferecer como Tributo monstros da sua mão ou do campo cuja soma dos Níveis seja igual ou exceda seu Nível. Você só pode usar cada efeito de "Magigarota Livromante" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札の儀式モンスター１体を相手に見せて発動できる。このカードを手札から特殊召喚する。②：相手ターンに発動できる。レベルの合計が儀式召喚するモンスターのレベル以上になるように、自分の手札・フィールドのモンスターをリリースし、手札から「リブロマンサー」儀式モンスター１体を儀式召喚する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -69,7 +70,8 @@ sets:
   - set_number: WPP3-JP016
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 848859
