--- a/data/cards/82184400.yaml
+++ b/data/cards/82184400.yaml
@@ -32,7 +32,9 @@ text:
   pt: |-
     2 monstros de ÁGUA
     Não pode ser usado como Matéria Link no turno em que for Invocado por Invocação-Link. Se este card for Invocado por Invocação-Link: você pode Invocar por Invocação-Especial 1 monstro Peixe da sua mão em uma zona sua para a qual este card apontar. Você pode escolher 1 outro monstro Peixe que você controla e 1 card que seu oponente controla; bana esses cards. Você só pode usar cada efeito de "Defensor do Abismo" uma vez por turno.
-  ja:
+  ja: |-
+    水属性モンスター２体
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。このカードはリンク召喚されたターンにはリンク素材にできない。①：このカードがリンク召喚に成功した場合に発動できる。手札から魚族モンスター１体をこのカードのリンク先となる自分フィールドに特殊召喚する。②：このカード以外の自分フィールドの魚族モンスター１体と相手フィールドのカード１枚を対象として発動できる。そのカードを除外する。
   ko:
   zh-TW:
   zh-CN: |-
@@ -101,7 +103,8 @@ sets:
   - set_number: WPP3-JP042
     set_name: World Premiere Pack 2022
     rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836288
