--- a/data/cards/88106656.yaml
+++ b/data/cards/88106656.yaml
@@ -26,7 +26,8 @@ text:
     Puoi Evocare tramite Rituale questa carta con una carta "Libromante". Se questa carta è stata Evocata tramite Rituale utilizzando uno o più mostri sul Terreno, essa non può essere distrutta in battaglia, inoltre qualsiasi danno da combattimento che essa infligge al tuo avversario viene raddoppiato. Questa carta può effettuare fino a 2 attacchi su mostri durante ogni Battle Phase. Quando un mostro dichiara un attacco: puoi bandire 1 Mostro Rituale "Libromante" dal tuo Cimitero; questa carta guadagna 200 ATK.
   pt: |-
     Você pode Invocar este card por Invocação-Ritual com um card "Livromante". Se este card foi Invocado por Invocação-Ritual usando um ou mais monstros no campo, ele não pode ser destruído em batalha e, além disso, qualquer dano de batalha que ele causar ao seu oponente é dobrado. Este card pode realizar até 2 ataques contra monstros durante cada Fase de Batalha. Quando um monstro declarar um ataque: você pode banir 1 Monstro de Ritual "Livromante" do seu Cemitério; este card ganha 200 de ATK.
-  ja:
+  ja: |-
+    「リブロマンサー」カードにより降臨。①：フィールドのモンスターを使用して儀式召喚したこのカードは、戦闘では破壊されず、相手に与える戦闘ダメージは倍になる。②：このカードは１度のバトルフェイズ中に２回までモンスターに攻撃できる。③：自分または相手のモンスターの攻撃宣言時、自分の墓地から「リブロマンサー」儀式モンスター１体を除外して発動できる。このカードの攻撃力は２００アップする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -73,5 +74,5 @@ sets:
     - Secret Rare
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 875977
