--- a/data/cards/88962829.yaml
+++ b/data/cards/88962829.yaml
@@ -26,7 +26,8 @@ text:
     Se questa carta viene Evocata Normalmente o Specialmente: puoi scegliere come bersaglio 2 dei tuoi mostri "Scarasoldato" con nomi diversi, che sono banditi e/o nel tuo Cimitero; aggiungili alla tua mano, ma, per il resto di questo turno, non puoi attivare i loro effetti, o gli effetti di carte con i loro nomi. Quando un mostro dell'avversario dichiara un attacco: puoi far ritornare questa carta nella mano e, se lo fai, annulla quell'attacco. Puoi utilizzare ogni effetto di "Scarasoldato Aleggiatore Leggero" una sola volta per turno.
   pt: |-
     Se este card for Invocado por Invocação-Normal ou Especial: você pode escolher 2 dos seus monstros "Bezoudado" com nomes diferentes, que estiverem banidos e/ou no seu Cemitério; adicione-os à sua mão, mas pelo resto deste turno, você não pode ativar os efeitos deles, ou os efeitos de cards com o nome deles. Quando um monstro do oponente declarar um ataque: você pode devolver este card para a mão e, se isso acontecer, negue o ataque. Você só pode usar cada efeito de "Voador Leve Bezoudado" uma vez por turno.
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが召喚・特殊召喚に成功した場合、自分の墓地のモンスター及び除外されている自分のモンスターの中から、カード名が異なる「ビートルーパー」モンスター２体を対象として発動できる。そのモンスターを手札に加える。このターン、自分はこの効果で手札に加えたカード及びその同名カードの効果を発動できない。②：相手モンスターの攻撃宣言時に発動できる。このカードを持ち主の手札に戻し、その攻撃を無効にする。
   ko:
   zh-TW:
   zh-CN: |-
@@ -91,7 +92,8 @@ sets:
   - set_number: WPP3-JP004
     set_name: World Premiere Pack 2022
     rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
-  ocg: Not yet released
+  ocg: Unlimited
 yugipedia_page_id: 836296
