--- a/data/cards/12213463.yaml
+++ b/data/cards/12213463.yaml
@@ -44,10 +44,7 @@ text:
     이 카드명의 ①③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 자신 필드에 드래곤족 튜너 또는 식물족 튜너가 존재할 경우에 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 이 카드가 일반 소환에 성공했을 때에 발동할 수 있다. 자신의 패 / 묘지에서 "화이트 로즈 드래곤" 이외의 "로즈 드래곤" 몬스터 1장을 고르고 특수 소환한다. ③: 이 카드가 싱크로 소재로서 묘지로 보내졌을 경우에 발동할 수 있다. 덱에서 레벨 4 이상의 식물족 몬스터 1장을 묘지로 보낸다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①③的效果1回合各能使用1次。
-    ①：自己场上有龙族或者植物族的调整存在的场合才能发动。这张卡从手卡特殊召唤。
-    ②：这张卡召唤成功时才能发动。从自己的手卡·墓地选「白蔷薇龙」以外的1只「蔷薇龙」怪兽特殊召唤。
-    ③：这张卡作为同调素材送去墓地的场合才能发动。从卡组把1只4星以上的植物族怪兽送去墓地。
+    此卡名的①③效果1回合仅可各使用1次。①：自己场上有龙族或植物族协调存在的情况下可以发动。从手牌将此卡特殊召唤。②：此卡召唤成功时可以发动。从自己的手牌・墓地挑选"白蔷薇龙"以外的1只"蔷薇龙"怪兽特殊召唤。③：此卡作为同步素材被送至墓地的情况下可以发动。从牌组将1只等级4以上的植物族怪兽送至墓地。
 card_type: Monster
 monster_type_line: Dragon / Effect
 attribute: DARK
@@ -120,6 +117,11 @@ sets:
     - Super Rare
   - set_number: LVP3-KR044
     set_name: LINK VRAINS Pack 3
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC038
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
 limit_regulation:
