--- a/data/cards/36280194.yaml
+++ b/data/cards/36280194.yaml
@@ -8,7 +8,7 @@ name:
   it: Soldato di Riserva
   pt: Soldado de Reforço
   ja: <ruby>補<rt>ほ</rt></ruby><ruby>充<rt>じゅう</rt></ruby><ruby>要<rt>よう</rt></ruby><ruby>員<rt>いん</rt></ruby>
-  ja_romaji: Hojū Yōin
+  ja_romaji: Hojūyōin
   ko: 보충 요원
   ko_rr:
   zh-TW:
