--- a/data/cards/25166510.yaml
+++ b/data/cards/25166510.yaml
@@ -12,7 +12,7 @@ name:
   ko: 샐러맨그레이트 <ruby>B<rt>비트</rt></ruby>바이슨
   ko_rr: Saelleomaen-geureiteu Biteu Baiseun
   zh-TW:
-  zh-CN: 转生炎兽 暴晒野牛
+  zh-CN: 转生炎兽 B野牛
 text:
   en: |-
     If you have 3 or more "Salamangreat" monsters in your GY: You can Special Summon this card from your hand in Defense Position. You can target FIRE Link Monsters in your GY, up to the number of face-up cards your opponent controls; return them to the Extra Deck, then, you can negate the effects of face-up cards your opponent controls until the end of this turn, up to the number of cards you returned. You can only use each effect of "Salamangreat Beat Bison" once per turn.
