--- a/data/cards/56003780.yaml
+++ b/data/cards/56003780.yaml
@@ -12,7 +12,7 @@ name:
   ko: 샐러맨그레이트 <ruby>J<rt>잭</rt></ruby>재규어
   ko_rr: Saelleomaen-geureiteu Jaek Jaegyu-eo
   zh-TW:
-  zh-CN: 转生炎兽 灯火美洲豹
+  zh-CN: 转生炎兽 J美洲豹
 text:
   en: |-
     If this card attacks a Defense Position monster, inflict piercing battle damage. If you control a "Salamangreat" Link Monster, while this card is in your GY: You can target 1 "Salamangreat" monster in your GY, except "Salamangreat Jack Jaguar"; shuffle that target into the Deck, and if you do, Special Summon this card to your zone your "Salamangreat" Link Monster points to. You can only use this effect of "Salamangreat Jack Jaguar" once per turn.
@@ -32,7 +32,7 @@ text:
     이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 수비 표시 몬스터를 공격했을 경우, 그 수비력을 공격력이 넘은 만큼만 전투 데미지를 준다. ②: 이 카드가 묘지에 존재하고, 자신 필드에 "샐러맨그레이트" 링크 몬스터가 존재할 경우, "샐러맨그레이트 J(잭)재규어" 이외의 자신 묘지의 "샐러맨그레이트" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 덱으로 되돌리고, 묘지의 이 카드를 자신의 "샐러맨그레이트" 링크 몬스터의 링크 앞이 되는 자신 필드에 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    这个卡名的②的效果1个回合只能使用1次。①：这张卡在对守备表示怪兽进行攻击的情况下，给其攻击力超出其守备力数值的战斗伤害。②：这张卡存在于墓地，且自己场上存在“转生炎兽”连接怪兽的情况下，可以“转生炎兽 灯火美洲豹”以外的自己墓地的1只“转生炎兽”怪兽为对象发动。该怪兽放回牌组，将墓地的这张卡特殊召唤至作为自己的“转生炎兽”连接怪兽的连接区的自己场上。
+    这个卡名的②的效果1个回合只能使用1次。①：这张卡在对守备表示怪兽进行攻击的情况下，给其攻击力超出其守备力数值的战斗伤害。②：这张卡存在于墓地，且自己场上存在“转生炎兽”连接怪兽的情况下，可以“转生炎兽 J美洲豹”以外的自己墓地的1只“转生炎兽”怪兽为对象发动。该怪兽放回牌组，将墓地的这张卡特殊召唤至作为自己的“转生炎兽”连接怪兽的连接区的自己场上。
 card_type: Monster
 monster_type_line: Cyberse / Effect
 attribute: FIRE
