--- a/data/cards/56585883.yaml
+++ b/data/cards/56585883.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피 하피스트
   ko_rr: Haepi Hapiseuteu
   zh-TW:
-  zh-CN: 鹰身竖琴师
+  zh-CN: 神鹰竖琴奏者
 text:
   en: |-
     This card's name becomes "Harpie Lady" while on the field or in the GY. You can only use each of these effects of "Harpie Harpist" once per turn.
@@ -44,7 +44,7 @@ text:
     이 카드명의 ②③의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드의 카드명은, 필드 / 묘지에 존재하는 한 "해피 레이디"로 취급한다. ②: 이 카드가 일반 소환에 성공했을 때, 이 카드 이외의 자신 필드의 비행야수족 몬스터 1장과 상대 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 주인의 패로 되돌린다. ③: 이 카드가 묘지로 보내진 턴의 엔드 페이즈에 발동할 수 있다. 덱에서 공격력 1500 이하의 비행야수족 / 레벨 4 몬스터 1장을 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    「鹰身竖琴师」的②③的效果1回合各能使用1次。①：这张卡的卡名只要在场上·墓地存在当作「鹰身女郎」使用。②：这张卡召唤成功时，以这张卡以外的自己场上1只鸟兽族怪兽和对方场上1只表侧表示怪兽为对象才能发动。那些怪兽回到持有者手卡。③：这张卡被送去墓地的回合的结束阶段才能发动。从卡组把1只攻击力1500以下的鸟兽族·4星怪兽加入手卡。
+    此卡名的②③效果1回合仅可各使用1次。①：此卡只要存在于场上・墓地，卡名视为"神鹰女郎"。②：此卡召唤成功时，以自己场上此卡以外的1只鸟兽族怪兽和对手场上的1只表侧表示怪兽为对象可以发动。将该怪兽放回持有者的手牌。③：在此卡被送至墓地的回合的结束阶段可以发动。从牌组将1只攻击力1500以下的鸟兽族・等级4怪兽加入手牌。
 card_type: Monster
 monster_type_line: Winged Beast / Effect
 attribute: WIND
@@ -137,6 +137,11 @@ sets:
     set_name: LINK VRAINS Pack 2
     rarities:
     - Rare
+  zh-CN:
+  - set_number: DP21-SC010
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
