--- a/data/cards/87639778.yaml
+++ b/data/cards/87639778.yaml
@@ -12,7 +12,7 @@ name:
   ko: 해피의 깃털눈보라
   ko_rr: Haepi-ui Git-teolnunbora
   zh-TW:
-  zh-CN: 鹰身女妖的羽毛吹雪
+  zh-CN: 神鹰羽毛吹雪
 text:
   en: |-
     If you control a WIND Winged Beast monster: Until the end of this turn, negate any monster effects your opponent activates. If you control a "Harpie" monster, you can activate this card from your hand. If this card in its owner's Spell & Trap Zone is destroyed by an opponent's card effect: You can add 1 "Harpie's Feather Duster" from your Deck or GY to your hand.
@@ -32,7 +32,7 @@ text:
     자신 필드에 "해피" 몬스터가 존재할 경우, 이 카드의 발동은 패에서도 할 수 있다. ①: 자신 필드에 비행야수족 / 바람 속성 몬스터가 존재할 경우에 발동할 수 있다. 턴 종료시까지, 상대가 발동한 몬스터의 효과는 무효화된다. ②: 마법 & 함정 존의 이 카드가 상대 효과로 파괴되었을 경우에 발동할 수 있다. 자신의 덱 / 묘지에서 "해피의 깃털" 1장을 고르고 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    自己场上有「鹰身」怪兽存在的场合，这张卡的发动从手卡也能用。①：自己场上有鸟兽族·风属性怪兽存在的场合才能发动。直到回合结束时，对方发动的怪兽的效果无效化。②：魔法与陷阱区域的这张卡被对方的效果破坏的场合才能发动。从自己的卡组·墓地选1张「鹰身女妖的羽毛扫」加入手卡。
+    自己场上有"神鹰"怪兽存在的情况下，此卡也可从手牌发动。①：自己场上有鸟兽族・风属性怪兽存在的情况下可以发动。直至回合结束时为止，对手发动的怪兽的效果无效化。②：魔法与陷阱区域的此卡因对手的效果被破坏的情况下可以发动。从自己的牌组・墓地挑选1张"神鹰羽毛扫"加入手牌。
 card_type: Trap
 property: Normal
 series:
@@ -118,6 +118,11 @@ sets:
     set_name: 20th Anniversary Pack 1st Wave
     rarities:
     - Ultra Parallel Rare
+  zh-CN:
+  - set_number: DP21-SC000
+    set_name: 'Duelist Pack: Legend Duelist 4'
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
