--- a/data/cards/yugipedia898533.yaml
+++ b/data/cards/yugipedia898533.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If this card is in your hand or GY, and you control an "Evil Eye" monster (Quick Effect): You can Special Summon this card, but banish it when it leaves the field. During your opponent’s turn, you can (Quick Effect): Immediately after this effect resolves, Link Summon 1 "Evil Eye" monster using materials you control. When you do, you can treat "Evil Eye" Equip Spells you control as "Evil Eye" monsters and use them as material. You can only use each effect of "Basiltrice, Familiar of the Evil Eye" once per turn.
+    If this card is in your hand or GY, and you control an "Evil Eye" monster (Quick Effect): You can Special Summon this card, but banish it when it leaves the field. During your opponent's turn, you can (Quick Effect): Immediately after this effect resolves, Link Summon 1 "Evil Eye" monster using materials you control. When you do, you can treat "Evil Eye" Equip Spells you control as "Evil Eye" monsters and use them as material. You can only use each effect of "Basiltrice, Familiar of the Evil Eye" once per turn.
   de:
   es:
   fr:
