--- a/data/cards/yugipedia899960.yaml
+++ b/data/cards/yugipedia899960.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2+ Level 9 monsters
-    You can only control 1 "Laevateinn, Generaider Boss of Shadows". All monsters your opponent controls lose 1000 ATK/DEF. (Quick Effect): You can Tribute this Xyz Summoned card; Special Summon 1 non-Fairy "Generaider" Xyz Monster from your Extra Deck, then you can attach cards from the field and/or any GY(s) to it as material up to the number of materials this card had.
+    You can only control 1 "Laevateinn, Generaider Boss of Shadows". All monsters your opponent controls lose 1000 ATK/DEF. (Quick Effect): You can Tribute this Xyz Summoned card; Special Summon 1 non-Fairy "Generaider" Xyz Monster from your Extra Deck, then you can attach cards from the field and/or any GY(s) to it as material, up to the number of materials this card had.
   de:
   es:
   fr:
