--- a/data/cards/04591250.yaml
+++ b/data/cards/04591250.yaml
@@ -113,6 +113,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: DP27-KR042
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
