--- a/data/cards/57312333.yaml
+++ b/data/cards/57312333.yaml
@@ -97,6 +97,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist'
     rarities:
     - Rare
+  - set_number: DP27-KR045
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
