--- a/data/cards/66690411.yaml
+++ b/data/cards/66690411.yaml
@@ -8,7 +8,7 @@ name:
   it: Pensiero in Onda
   pt: Cabeça no Ar
   ja: マインド・オン・エア
-  ja_romaji: Maindo on Ea
+  ja_romaji: Maindo On Ea
   ko: 마인드 온 에어
   ko_rr:
   zh-TW:
