--- a/data/cards/68084557.yaml
+++ b/data/cards/68084557.yaml
@@ -91,6 +91,10 @@ sets:
     set_name: Premium Pack Vol.8
     rarities:
     - Super Rare
+  - set_number: DP27-KR015
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
