--- a/data/cards/86821010.yaml
+++ b/data/cards/86821010.yaml
@@ -70,6 +70,10 @@ sets:
     set_name: The Shining Darkness
     rarities:
     - Common
+  - set_number: DP27-KR020
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
