--- a/data/cards/01876841.yaml
+++ b/data/cards/01876841.yaml
@@ -86,6 +86,11 @@ sets:
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
     - Rare
+  ko:
+  - set_number: DP27-KR002
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
