--- a/data/cards/02403771.yaml
+++ b/data/cards/02403771.yaml
@@ -167,6 +167,10 @@ sets:
     - Ultra Rare
     - Ultimate Rare
     - Holographic Rare
+  - set_number: DP27-KR000
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Extra Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
