--- a/data/cards/10928224.yaml
+++ b/data/cards/10928224.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist'
     rarities:
     - Rare
+  - set_number: DP27-KR040
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
