--- a/data/cards/10979723.yaml
+++ b/data/cards/10979723.yaml
@@ -129,6 +129,10 @@ sets:
     set_name: Expert Edition Volume.1
     rarities:
     - Common
+  - set_number: DP27-KR039
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
