--- a/data/cards/15521027.yaml
+++ b/data/cards/15521027.yaml
@@ -95,6 +95,10 @@ sets:
     set_name: Secrets of Eternity
     rarities:
     - Common
+  - set_number: DP27-KR009
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
