--- a/data/cards/15951532.yaml
+++ b/data/cards/15951532.yaml
@@ -102,6 +102,10 @@ sets:
     set_name: Duelist Revolution
     rarities:
     - Super Rare
+  - set_number: DP27-KR037
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
