--- a/data/cards/17484499.yaml
+++ b/data/cards/17484499.yaml
@@ -143,6 +143,10 @@ sets:
     rarities:
     - Secret Rare
     - Millennium Rare
+  - set_number: DP27-KR029
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
