--- a/data/cards/23965033.yaml
+++ b/data/cards/23965033.yaml
@@ -48,6 +48,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  ko:
+  - set_number: DP27-KR034
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
