--- a/data/cards/24087580.yaml
+++ b/data/cards/24087580.yaml
@@ -58,6 +58,11 @@ sets:
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
     - Rare
+  ko:
+  - set_number: DP27-KR031
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
