--- a/data/cards/24094653.yaml
+++ b/data/cards/24094653.yaml
@@ -797,6 +797,10 @@ sets:
     set_name: 'Structure Deck: Revolver'
     rarities:
     - Common
+  - set_number: DP27-KR044
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
   zh-CN:
   - set_number: MGP2-SC175
     set_name: Mega Pack 02
