--- a/data/cards/25165047.yaml
+++ b/data/cards/25165047.yaml
@@ -112,6 +112,10 @@ sets:
     rarities:
     - Ultra Rare
     - Ultimate Rare
+  - set_number: DP27-KR014
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
