--- a/data/cards/28002611.yaml
+++ b/data/cards/28002611.yaml
@@ -83,6 +83,10 @@ sets:
     set_name: Crossroads of Chaos
     rarities:
     - Common
+  - set_number: DP27-KR012
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
