--- a/data/cards/31102447.yaml
+++ b/data/cards/31102447.yaml
@@ -121,6 +121,10 @@ sets:
     set_name: Collectors Pack 2017
     rarities:
     - Common
+  - set_number: DP27-KR041
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
