--- a/data/cards/31525442.yaml
+++ b/data/cards/31525442.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
     - Common
+  ko:
+  - set_number: DP27-KR028
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
