--- a/data/cards/36148308.yaml
+++ b/data/cards/36148308.yaml
@@ -66,6 +66,11 @@ sets:
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
     - Rare
+  ko:
+  - set_number: DP27-KR007
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
