--- a/data/cards/37260946.yaml
+++ b/data/cards/37260946.yaml
@@ -83,6 +83,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  ko:
+  - set_number: DP27-KR004
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
