--- a/data/cards/37745919.yaml
+++ b/data/cards/37745919.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: Raging Battle
     rarities:
     - Rare
+  - set_number: DP27-KR016
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
