--- a/data/cards/48381268.yaml
+++ b/data/cards/48381268.yaml
@@ -88,6 +88,10 @@ sets:
     set_name: Crimson Crisis
     rarities:
     - Common
+  - set_number: DP27-KR011
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
