--- a/data/cards/50486289.yaml
+++ b/data/cards/50486289.yaml
@@ -43,6 +43,12 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  ko:
+  - set_number: DP27-KR032
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
