--- a/data/cards/56074358.yaml
+++ b/data/cards/56074358.yaml
@@ -76,6 +76,10 @@ sets:
     set_name: Crimson Crisis
     rarities:
     - Common
+  - set_number: DP27-KR019
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
