--- a/data/cards/57108202.yaml
+++ b/data/cards/57108202.yaml
@@ -90,6 +90,10 @@ sets:
     set_name: Raging Battle
     rarities:
     - Rare
+  - set_number: DP27-KR010
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
