--- a/data/cards/64487132.yaml
+++ b/data/cards/64487132.yaml
@@ -73,6 +73,12 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  ko:
+  - set_number: DP27-KR003
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
