--- a/data/cards/68507541.yaml
+++ b/data/cards/68507541.yaml
@@ -111,6 +111,10 @@ sets:
     set_name: Collectors Pack 2017
     rarities:
     - Common
+  - set_number: DP27-KR043
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
