--- a/data/cards/84539520.yaml
+++ b/data/cards/84539520.yaml
@@ -101,6 +101,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist'
     rarities:
     - Ultra Rare
+  - set_number: DP27-KR038
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
