--- a/data/cards/86758746.yaml
+++ b/data/cards/86758746.yaml
@@ -38,6 +38,11 @@ sets:
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
     - Rare
+  ko:
+  - set_number: DP27-KR036
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
