--- a/data/cards/90659259.yaml
+++ b/data/cards/90659259.yaml
@@ -89,6 +89,12 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  ko:
+  - set_number: DP27-KR006
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
