--- a/data/cards/98715423.yaml
+++ b/data/cards/98715423.yaml
@@ -40,6 +40,12 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  ko:
+  - set_number: DP27-KR025
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
