--- a/data/cards/99937011.yaml
+++ b/data/cards/99937011.yaml
@@ -42,6 +42,11 @@ sets:
     set_name: 'Duelist Pack: Duelists of Pyroxene'
     rarities:
     - Rare
+  ko:
+  - set_number: DP27-KR022
+    set_name: 'Duelist Pack: Duelists of Pyroxene'
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
