--- a/data/cards/46659709.yaml
+++ b/data/cards/46659709.yaml
@@ -136,6 +136,10 @@ sets:
     set_name: 'Collectors Pack: Duelist of Flash Version'
     rarities:
     - Common
+  - set_number: 22TP-JP404
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: EP14-KR050
     set_name: 'Extra Pack: Knights of Order'
