--- a/data/cards/77840540.yaml
+++ b/data/cards/77840540.yaml
@@ -88,6 +88,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 2'
     rarities:
     - Rare
+  - set_number: 22TP-JP414
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: DP19-KR009
     set_name: 'Duelist Pack: Legend Duelist 2'
