--- a/data/cards/89132148.yaml
+++ b/data/cards/89132148.yaml
@@ -92,6 +92,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 3'
     rarities:
     - Super Rare
+  - set_number: 22TP-JP405
+    set_name: Tournament Pack 2022 Vol.4
+    rarities:
+    - Common
   ko:
   - set_number: DP20-KR036
     set_name: 'Duelist Pack: Legend Duelist 3'
