--- a/data/cards/yugipedia897907.yaml
+++ b/data/cards/yugipedia897907.yaml
@@ -32,7 +32,7 @@ attribute: DARK
 level: 6
 atk: 2000
 def: 1800
-materials: 1 LIGHT Tuner + 1+ non-Tuner DARK monsters
+materials: 1 LIGHT Tuner + 1 or more non-Tuner DARK monsters
 series:
 - Chaos
 sets:
