--- a/data/cards/11398951.yaml
+++ b/data/cards/11398951.yaml
@@ -32,7 +32,7 @@ text:
     "사이버 엔젤" 의식 몬스터의 의식 소환에 필요 ①: 레벨의 합계가 의식 소환할 몬스터와 같아지도록, 자신의 패 / 필드의 몬스터를 릴리스. 또는 릴리스 대신에 자신 묘지에서 천사족 또는 전사족 몬스터를 덱으로 되돌리고, 패에서 "사이버 엔젤" 의식 몬스터 1장을 의식 소환한다.
   zh-TW:
   zh-CN: |-
-    「电子化天使」仪式怪兽的降临必需。 ①：等级合计直到变成和仪式召唤的怪兽相同为止，把自己的手卡·场上的怪兽解放或者作为解放的代替而从自己墓地让天使族或者战士族的怪兽回到卡组，从手卡把1只「电子化天使」仪式怪兽仪式召唤。
+    "电子天使"仪式怪兽降临所必需。①：为使合计等级与仪式召唤的怪兽相等，解放自己手牌・场上的怪兽，或从自己的墓地将天使族或战士族怪兽放回牌组作为解放的代替，从手牌将1只"电子天使"仪式怪兽仪式召唤。
 card_type: Spell
 property: Ritual
 series:
@@ -91,6 +91,11 @@ sets:
   ko:
   - set_number: RATE-KR055
     set_name: Raging Tempest
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: DP21-SC028
+    set_name: 'Duelist Pack: Legend Duelist 4'
     rarities:
     - Common
 limit_regulation:
