--- a/data/cards/29948294.yaml
+++ b/data/cards/29948294.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     Reveal 1 monster in your hand and send 1 Level 8 Fusion Monster from your Extra Deck to the GY with the same Type that has 2500 ATK or DEF, then you can apply this effect.
-    ● Discard the revealed monster, and if you do, add 1 "Fallen of Albaz", or 1 monster that lists that card in its text, from your Deck to your hand.
+    ● Discard the revealed monster, and if you do, add 1 "Fallen of Albaz", or 1 monster that mentions it, from your Deck to your hand.
     During the End Phase, if a Fusion Monster was sent to your GY this turn: You can add this card from the GY to your hand. You can only use 1 "Branded in High Spirits" effect per turn, and only once that turn.
   de: |-
     Zeige 1 Monster in deiner Hand vor und lege 1 Fusionsmonster der Stufe 8 mit demselben Typ und 2500 ATK oder DEF von deinem Extra Deck auf den Friedhof, dann kannst du diesen Effekt ausführen.
@@ -64,7 +64,7 @@ sets:
     set_name: Burst of Destiny
     rarities:
     - Super Rare
-  - set_number: MP22-FR217
+  - set_number: MP22-DE217
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Common
