--- a/data/cards/69035382.yaml
+++ b/data/cards/69035382.yaml
@@ -111,6 +111,10 @@ sets:
     set_name: OTS Tournament Pack 12
     rarities:
     - Common
+  - set_number: MP22-FR250
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Ultra Rare
   it:
   - set_number: DR1-IT248
     set_name: Dark Revelation Volume 1
