--- a/data/cards/yugipedia900037.yaml
+++ b/data/cards/yugipedia900037.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>六世壊根清浄<rt>クシャトリラ・ビッグバン</rt></ruby>
-  ja_romaji: Kushatorira Biggu Ban
+  ja_romaji: Kushatorira Bigguban
   ko:
   ko_rr:
   zh-TW:
