--- a/data/cards/55521751.yaml
+++ b/data/cards/55521751.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 轻风游鸟与未知之风
 text:
   en: |-
-    You can conduct Tribute Summons that require 2 Tributes by sending 1 monster you control and 1 card your opponent controls to the GY instead of Tributing (it is still treated as a Tribute Summon). During your Main Phase: You can reveal up to 2 Winged Beast monsters in your hand and place them on the bottom of your Deck in any order, then draw cards equal to the number of cards placed. You can only use this effect of "Floowandereeze and the Unexplored Winds" once per turn.
+    You can conduct Tribute Summons that require 2 Tributes by sending 1 monster you control and 1 card your opponent controls to the GY instead of Tributing (it is still treated as a Tribute Summon). During your Main Phase: You can reveal up to 2 Winged Beast monsters in your hand and place them on the bottom of your Deck in any order, then draw the same number of cards. You can only use this effect of "Floowandereeze and the Unexplored Winds" once per turn.
   de: |-
     Du kannst Tributbeschwörungen duchführen, die 2 Tribute erfordern, indem du 1 Monster, das du kontrollierst, und 1 Karte, die dein Gegner kontrolliert, auf den Friedhof legst, statt Tribut anzubieten. (Dies wird trotzdem als Tributbeschwörung behandelt.) Während deiner Main Phase: Du kannst bis zu 2 Geflügeltes Ungeheuer-Monster in deiner Hand vorzeigen und sie in beliebiger Reihenfolge unter dein Deck legen, dann ziehe Karten in Höhe der Anzahl der gelegten Karten. Du kannst diesen Effekt von „Wanderbrise und die unbekannten Winde“ nur einmal pro Spielzug verwenden.
   es: |-
