--- a/data/cards/77610503.yaml
+++ b/data/cards/77610503.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 轻风游鸟与恐怖的海
 text:
   en: |-
-    When your opponent would Special Summon a monster(s), while you control a face-up Tribute Summoned monster and no Special Summoned monsters: Negate the Summon, and if you do, return that monster to the hand, also for the rest of this turn, your opponent cannot Special Summon, and can conduct up to 3 Normal Summons/Sets this turn, not just 1. You can only activate 1 "Floowandereeze and the Scary Sea" per turn.
+    When your opponent would Special Summon a monster(s), while you control a face-up Tribute Summoned monster and no Special Summoned monsters: Negate the Summon, and if you do, return that monster(s) to the hand, also for the rest of this turn, your opponent cannot Special Summon, and can conduct up to 3 Normal Summons/Sets this turn, not just 1. You can only activate 1 "Floowandereeze and the Scary Sea" per turn.
   de: |-
     Wenn dein Gegner ein oder mehr Monster als Spezialbeschwörung beschwören würde, solange du ein offenes als Tributbeschwörung beschworenes Monster und keine als Spezialbeschwörung beschworenen Monster kontrollierst: Annulliere die Beschwörung und falls du dies tust, gib die Monster auf die Hand zurück, zusätzlich kann dein Gegner für den Rest dieses Spielzugs keine Spezialbeschwörungen durchführen und kann in diesem Spielzug bis zu 3 Normalbeschwörungen/Setzen durchführen, nicht nur 1. Du kannst nur 1 „Wanderbrise und das schreckliche Meer“ pro Spielzug aktivieren.
   es: |-
