--- a/data/cards/82738008.yaml
+++ b/data/cards/82738008.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     Target 1 "Despia" monster or "Fallen of Albaz" in your GY; add it to your hand, then you can apply the following effect.
-    ● Fusion Summon 1 Level 8 or higher Fusion Monster from your Extra Deck, by banishing Fusion Materials listed on it from your hand or field, but it cannot attack directly this turn.
+    ● Fusion Summon 1 Level 8 or higher Fusion Monster from your Extra Deck, by banishing Fusion Materials mentioned on it from your hand or field, but it cannot attack directly this turn.
     You can only activate 1 "Branded in Red" per turn.
   de: |-
     Wähle 1 „Despia“-Monster oder „Gefallener von Albaz“ in deinem Friedhof; füge es oder ihn deiner Hand hinzu, dann kannst du den folgenden Effekt ausführen.
