--- a/data/cards/yugipedia900032.yaml
+++ b/data/cards/yugipedia900032.yaml
@@ -1,7 +1,7 @@
 konami_id:
 password:
 name:
-  en: Kshatri-La Overwrap
+  en: Kshatri-La Overlap
   de:
   es:
   fr:
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Target 1 monster on the field; banish 1 monster with 1500 ATK/2100 DEF from your hand, GY, or that is face-up on either field, and if you do, the targeted monster gains 1500 ATK. If this card becomes banished and you control a "Kshatri-La" monster: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. You can only use each effect of "Kshatri-La Overwrap" once per turn.
+    Target 1 monster on the field; banish 1 monster with 1500 ATK/2100 DEF from your hand, GY, or that is face-up on either field, and if you do, the targeted monster gains 1500 ATK. If this card becomes banished and you control a "Kshatri-La" monster: You can target 1 Effect Monster your opponent controls; negate its effects until the end of this turn. You can only use each effect of "Kshatri-La Overlap" once per turn.
   de:
   es:
   fr:
