--- a/data/cards/04647954.yaml
+++ b/data/cards/04647954.yaml
@@ -66,7 +66,7 @@ sets:
   - set_number: MP22-EN059
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: LIOV-DE003
     set_name: Lightning Overdrive
@@ -75,7 +75,7 @@ sets:
   - set_number: MP22-DE059
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: LIOV-FR003
     set_name: Lightning Overdrive
@@ -84,7 +84,7 @@ sets:
   - set_number: MP22-FR059
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: LIOV-IT003
     set_name: Lightning Overdrive
@@ -93,7 +93,7 @@ sets:
   - set_number: MP22-IT059
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: LIOV-PT003
     set_name: Lightning Overdrive
@@ -102,7 +102,7 @@ sets:
   - set_number: MP22-PT059
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: LIOV-JP003
     set_name: Lightning Overdrive
