--- a/data/cards/06128460.yaml
+++ b/data/cards/06128460.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 白骨烤王
 text:
   en: |-
-    This card's name becomes "Skull Servant" while in the GY. If a Level 3 or lower Zombie monster(s) you control would be destroyed by battle or card effect, you can discard this card, instead. If this card is sent to the GY: You can add 2 monsters with different names from your Deck to your hand, except "Wightbaking", that are either "Skull Servant" or specifically list "Skull Servant" in their text, then discard 1 card. You can only use this effect of "Wightbaking" once per turn.
+    This card's name becomes "Skull Servant" while in the GY. If a Level 3 or lower Zombie monster(s) you control would be destroyed by battle or card effect, you can discard this card, instead. If this card is sent to the GY: You can add 2 monsters with different names from your Deck to your hand, except "Wightbaking", that are either "Skull Servant" or mention it, then discard 1 card. You can only use this effect of "Wightbaking" once per turn.
   de: |-
     Der Name dieser Karte wird zu „Totenkopfdiener“, solange sie im Friedhof liegt. Falls ein oder mehr Zombie-Monster der Stufe 3 oder niedriger, die du kontrollierst, durch Kampf oder einen Karteneffekt zerstört würden, kannst du stattdessen diese Karte abwerfen. Falls diese Karte auf den Friedhof gelegt wird: Du kannst deiner Hand 2 Monster mit unterschiedlichen Namen von deinem Deck hinzufügen, außer „Wichtröster“, die entweder „Totenkopfdiener“ sind oder „Totenkopfdiener“ ausdrücklich in ihrem Text erwähnen, dann wirf 1 Karte ab. Du kannst diesen Effekt von „Wichtröster“ nur einmal pro Spielzug verwenden.
   es: |-
