--- a/data/cards/24639891.yaml
+++ b/data/cards/24639891.yaml
@@ -84,6 +84,15 @@ sets:
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
     - Super Rare
+  pt:
+  - set_number: DAMA-PT011
+    set_name: Dawn of Majesty
+    rarities:
+    - Common
+  - set_number: MP22-PT127
+    set_name: 2022 Tin of the Pharaoh's Gods
+    rarities:
+    - Super Rare
   ja:
   - set_number: DAMA-JP011
     set_name: Dawn of Majesty
