--- a/data/cards/63144961.yaml
+++ b/data/cards/63144961.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 救世吸收
 text:
   en: |-
-    Target 1 "Stardust Dragon", or 1 Synchro Monster that lists "Stardust Dragon" in its text, that you control, then activate 1 of these effects;
+    Target 1 "Stardust Dragon", or 1 Synchro Monster that mentions it, that you control, then activate 1 of these effects;
     ● Equip 1 face-up monster your opponent controls to that target.
     ● It can attack directly this turn.
     ● This turn, each time it destroys an opponent's monster by battle, inflict damage to your opponent equal to the destroyed monster's original ATK.
