--- a/data/cards/69167267.yaml
+++ b/data/cards/69167267.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 馨香蔷薇的发芽
 text:
   en: |-
-    Special Summon 1 "Rose Dragon" monster from your hand or GY in Defense Position. If this Set card is destroyed: You can target 1 of your "Black Rose Dragon" or 1 monster that lists that card in its text, that is banished or in your GY; Special Summon it. You can only use each effect of "Basal Rose Shoot" once per turn.
+    Special Summon 1 "Rose Dragon" monster from your hand or GY in Defense Position. If this Set card is destroyed: You can target 1 of your "Black Rose Dragon", or 1 monster that mentions it, that is banished or in your GY; Special Summon it. You can only use each effect of "Basal Rose Shoot" once per turn.
   de: |-
     Beschwöre 1 „Rosendrache“-Monster als Spezialbeschwörung von deiner Hand oder deinem Friedhof in die Verteidigungsposition. Falls diese gesetzte Karte zerstört wird: Du kannst 1 deiner „Schwarzer Rosendrache“ oder 1 Monster, das die Karte in ihrem Text aufführt, und der oder das verbannt ist oder sich in deinem Friedhof befindet, wählen; beschwöre ihn oder es als Spezialbeschwörung. Du kannst jeden Effekt von „Rosenwurzelaustrieb“ nur einmal pro Spielzug verwenden.
   es: |-
