--- a/data/cards/yugipedia899960.yaml
+++ b/data/cards/yugipedia899960.yaml
@@ -32,7 +32,7 @@ attribute: FIRE
 rank: 9
 atk: 2500
 def: 2500
-materials: 2+ Level 9 monsters
+materials: 2 or more Level 9 monsters
 series:
 - Generaider
 sets:
