--- a/data/cards/01174075.yaml
+++ b/data/cards/01174075.yaml
@@ -63,7 +63,7 @@ sets:
   - set_number: MP22-EN084
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: LIOV-DE043
     set_name: Lightning Overdrive
@@ -72,7 +72,7 @@ sets:
   - set_number: MP22-DE084
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: LIOV-FR043
     set_name: Lightning Overdrive
@@ -81,7 +81,7 @@ sets:
   - set_number: MP22-FR084
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: LIOV-IT043
     set_name: Lightning Overdrive
@@ -90,7 +90,7 @@ sets:
   - set_number: MP22-IT084
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: LIOV-PT043
     set_name: Lightning Overdrive
@@ -99,7 +99,7 @@ sets:
   - set_number: MP22-PT084
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: LIOV-JP043
     set_name: Lightning Overdrive
