--- a/data/cards/07614732.yaml
+++ b/data/cards/07614732.yaml
@@ -60,7 +60,7 @@ sets:
   - set_number: MP22-EN050
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: BLVO-DE087
     set_name: Blazing Vortex
@@ -69,7 +69,7 @@ sets:
   - set_number: MP22-DE050
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: BLVO-FR087
     set_name: Blazing Vortex
@@ -78,7 +78,7 @@ sets:
   - set_number: MP22-FR050
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: BLVO-IT087
     set_name: Blazing Vortex
@@ -87,7 +87,7 @@ sets:
   - set_number: MP22-IT050
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: BLVO-PT087
     set_name: Blazing Vortex
@@ -96,7 +96,7 @@ sets:
   - set_number: MP22-PT050
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: WPP2-JP054
     set_name: World Premiere Pack 2021
