--- a/data/cards/36637374.yaml
+++ b/data/cards/36637374.yaml
@@ -48,7 +48,7 @@ sets:
   - set_number: MP22-EN155
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: DAMA-DE054
     set_name: Dawn of Majesty
@@ -57,7 +57,7 @@ sets:
   - set_number: MP22-DE155
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: DAMA-FR054
     set_name: Dawn of Majesty
@@ -66,7 +66,7 @@ sets:
   - set_number: MP22-FR155
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: DAMA-IT054
     set_name: Dawn of Majesty
@@ -75,7 +75,7 @@ sets:
   - set_number: MP22-IT155
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: DAMA-PT054
     set_name: Dawn of Majesty
@@ -84,7 +84,7 @@ sets:
   - set_number: MP22-PT155
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: DAMA-JP054
     set_name: Dawn of Majesty
