--- a/data/cards/37799519.yaml
+++ b/data/cards/37799519.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 星尘同调士
 text:
   en: |-
-    If this card is in your hand or GY: You can Tribute 1 monster; Special Summon this card, but banish it when it leaves the field, also, you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. If this card is Normal or Special Summoned: You can add 1 Spell/Trap from your Deck to your hand that specifically lists "Stardust Dragon" in its text. You can only use each effect of "Stardust Synchron" once per turn.
+    If this card is in your hand or GY: You can Tribute 1 monster; Special Summon this card, but banish it when it leaves the field, also, you cannot Special Summon monsters from the Extra Deck for the rest of this turn, except Synchro Monsters. If this card is Normal or Special Summoned: You can add 1 Spell/Trap from your Deck to your hand that mentions "Stardust Dragon". You can only use each effect of "Stardust Synchron" once per turn.
   de: |-
     Falls sich diese Karte in deiner Hand oder deinem Friedhof befindet: Du kannst 1 Monster als Tribut anbieten; beschwöre diese Karte als Spezialbeschwörung, aber verbanne sie, wenn sie das Spielfeld verlässt, zusätzlich kannst du für den Rest dieses Spielzugs keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer Synchromonstern. Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 Zauber/Falle von deinem Deck hinzufügen, der oder die ausdrücklich „Sternenstaubdrache“ in seinem oder ihrem Text erwähnt. Du kannst jeden Effekt von „Sternenstaub-Synchron“ nur einmal pro Spielzug verwenden.
   es: |-
