--- a/data/cards/40139997.yaml
+++ b/data/cards/40139997.yaml
@@ -62,7 +62,7 @@ sets:
   - set_number: MP22-EN077
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: LIOV-DE035
     set_name: Lightning Overdrive
@@ -71,7 +71,7 @@ sets:
   - set_number: MP22-DE077
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: LIOV-FR035
     set_name: Lightning Overdrive
@@ -80,7 +80,7 @@ sets:
   - set_number: MP22-FR077
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: LIOV-IT035
     set_name: Lightning Overdrive
@@ -89,7 +89,7 @@ sets:
   - set_number: MP22-IT077
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: LIOV-PT035
     set_name: Lightning Overdrive
@@ -98,7 +98,7 @@ sets:
   - set_number: MP22-PT077
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: LIOV-JP035
     set_name: Lightning Overdrive
