--- a/data/cards/56196385.yaml
+++ b/data/cards/56196385.yaml
@@ -50,7 +50,7 @@ sets:
   - set_number: MP22-EN006
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: BLVO-DE010
     set_name: Blazing Vortex
@@ -59,7 +59,7 @@ sets:
   - set_number: MP22-DE006
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: BLVO-FR010
     set_name: Blazing Vortex
@@ -68,7 +68,7 @@ sets:
   - set_number: MP22-FR006
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: BLVO-IT010
     set_name: Blazing Vortex
@@ -77,7 +77,7 @@ sets:
   - set_number: MP22-IT006
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: BLVO-PT010
     set_name: Blazing Vortex
@@ -86,7 +86,7 @@ sets:
   - set_number: MP22-PT006
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: BLVO-JP010
     set_name: Blazing Vortex
