--- a/data/cards/62962630.yaml
+++ b/data/cards/62962630.yaml
@@ -56,7 +56,7 @@ sets:
   - set_number: MP22-EN123
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: DAMA-DE006
     set_name: Dawn of Majesty
@@ -69,7 +69,7 @@ sets:
   - set_number: MP22-DE123
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: DAMA-FR006
     set_name: Dawn of Majesty
@@ -82,7 +82,7 @@ sets:
   - set_number: MP22-FR123
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: DAMA-IT006
     set_name: Dawn of Majesty
@@ -95,7 +95,7 @@ sets:
   - set_number: MP22-IT123
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: DAMA-PT006
     set_name: Dawn of Majesty
@@ -108,7 +108,7 @@ sets:
   - set_number: MP22-PT123
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: DAMA-JP006
     set_name: Dawn of Majesty
