--- a/data/cards/63854005.yaml
+++ b/data/cards/63854005.yaml
@@ -47,7 +47,7 @@ sets:
   - set_number: MP22-EN163
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: DAMA-DE066
     set_name: Dawn of Majesty
@@ -56,7 +56,7 @@ sets:
   - set_number: MP22-DE163
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: DAMA-FR066
     set_name: Dawn of Majesty
@@ -65,7 +65,7 @@ sets:
   - set_number: MP22-FR163
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: DAMA-IT066
     set_name: Dawn of Majesty
@@ -74,7 +74,7 @@ sets:
   - set_number: MP22-IT163
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: DAMA-PT066
     set_name: Dawn of Majesty
@@ -83,7 +83,7 @@ sets:
   - set_number: MP22-PT163
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: DAMA-JP066
     set_name: Dawn of Majesty
