--- a/data/cards/70219023.yaml
+++ b/data/cards/70219023.yaml
@@ -16,8 +16,7 @@ name:
 text:
   en: |-
     1 Synchro Monster + 1 Xyz Monster + 1 Link Monster
-    Once while this Fusion Summoned card is face-up on the field: You can pay LP in multiples of 2000 and apply 1 of the following effects for every 2000 LP paid. (You can only apply each effect once.)
-    ● Add 1 Spell/Trap from your GY to your hand. ● Destroy 3 cards your opponent controls. ● This turn, this card gains ATK equal to half of the difference between your LP and your opponent's, also your other monsters cannot attack.
+    Once while this Fusion Summoned card is face-up on the field: You can pay LP in multiples of 2000 and choose 1 effect for every 2000 LP paid (you can only apply each effect once, and you resolve them in the listed order, skipping any that were not chosen); ● Add 1 Spell/Trap from your GY to your hand. ● Destroy 3 cards your opponent controls. ● This turn, this card gains ATK equal to half of the difference between your LP and your opponent's, also your other monsters cannot attack.
     You can only use this effect of "Coordius the Triphasic Dealmon" once per turn.
   de: |-
     1 Synchromonster + 1 Xyz-Monster + 1 Linkmonster
