--- a/data/cards/72272462.yaml
+++ b/data/cards/72272462.yaml
@@ -62,7 +62,7 @@ sets:
   - set_number: MP22-EN141
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: DAMA-DE034
     set_name: Dawn of Majesty
@@ -71,7 +71,7 @@ sets:
   - set_number: MP22-DE141
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: DAMA-FR034
     set_name: Dawn of Majesty
@@ -80,7 +80,7 @@ sets:
   - set_number: MP22-FR141
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: DAMA-IT034
     set_name: Dawn of Majesty
@@ -89,7 +89,7 @@ sets:
   - set_number: MP22-IT141
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: DAMA-PT034
     set_name: Dawn of Majesty
@@ -98,7 +98,7 @@ sets:
   - set_number: MP22-PT141
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: DAMA-JP034
     set_name: Dawn of Majesty
