--- a/data/cards/75402014.yaml
+++ b/data/cards/75402014.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     3 Level 5 monsters
-    (This card's name is always treated as "Number C39: Utopia Ray".)
+    (This card is always treated as "Number C39: Utopia Ray".)
     Once per turn, when a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can equip 1 "ZW -" monster from your hand or Deck to this card as if it were equipped by that monster's effect. Once per turn: You can detach 1 material from this card, then target face-up cards your opponent controls up to the number of "ZW -" Monster Cards equipped to this card; negate their effects.
   de: |-
     3 Monster der Stufe 5
@@ -74,7 +74,7 @@ sets:
   - set_number: MP22-EN081
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - R
+    - Rare
   de:
   - set_number: LIOV-DE039
     set_name: Lightning Overdrive
@@ -83,7 +83,7 @@ sets:
   - set_number: MP22-DE081
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - R
+    - Rare
   fr:
   - set_number: LIOV-FR039
     set_name: Lightning Overdrive
@@ -92,7 +92,7 @@ sets:
   - set_number: MP22-FR081
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - R
+    - Rare
   it:
   - set_number: LIOV-IT039
     set_name: Lightning Overdrive
@@ -101,7 +101,7 @@ sets:
   - set_number: MP22-IT081
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - R
+    - Rare
   pt:
   - set_number: LIOV-PT039
     set_name: Lightning Overdrive
@@ -110,7 +110,7 @@ sets:
   - set_number: MP22-PT081
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - R
+    - Rare
   ja:
   - set_number: LIOV-JP039
     set_name: Lightning Overdrive
