--- a/data/cards/84211599.yaml
+++ b/data/cards/84211599.yaml
@@ -47,7 +47,7 @@ sets:
   - set_number: MP22-EN037
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: BLVO-DE065
     set_name: Blazing Vortex
@@ -57,7 +57,7 @@ sets:
   - set_number: MP22-DE037
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: BLVO-FR065
     set_name: Blazing Vortex
@@ -67,7 +67,7 @@ sets:
   - set_number: MP22-FR037
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: BLVO-IT065
     set_name: Blazing Vortex
@@ -77,7 +77,7 @@ sets:
   - set_number: MP22-IT037
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: BLVO-PT065
     set_name: Blazing Vortex
@@ -87,7 +87,7 @@ sets:
   - set_number: MP22-PT037
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: BLVO-JP065
     set_name: Blazing Vortex
