--- a/data/cards/87746184.yaml
+++ b/data/cards/87746184.yaml
@@ -67,7 +67,7 @@ sets:
   - set_number: MP22-EN076
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: LIOV-DE033
     set_name: Lightning Overdrive
@@ -80,7 +80,7 @@ sets:
   - set_number: MP22-DE076
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: LIOV-FR033
     set_name: Lightning Overdrive
@@ -93,7 +93,7 @@ sets:
   - set_number: MP22-FR076
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: LIOV-IT033
     set_name: Lightning Overdrive
@@ -106,7 +106,7 @@ sets:
   - set_number: MP22-IT076
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: LIOV-PT033
     set_name: Lightning Overdrive
@@ -119,7 +119,7 @@ sets:
   - set_number: MP22-PT076
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: LIOV-JP033
     set_name: Lightning Overdrive
