--- a/data/cards/92919429.yaml
+++ b/data/cards/92919429.yaml
@@ -52,7 +52,7 @@ sets:
   - set_number: MP22-EN056
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: LIOV-DE000
     set_name: Lightning Overdrive
@@ -61,7 +61,7 @@ sets:
   - set_number: MP22-DE056
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: LIOV-FR000
     set_name: Lightning Overdrive
@@ -70,7 +70,7 @@ sets:
   - set_number: MP22-FR056
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: LIOV-IT000
     set_name: Lightning Overdrive
@@ -79,7 +79,7 @@ sets:
   - set_number: MP22-IT056
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: LIOV-PT000
     set_name: Lightning Overdrive
@@ -88,7 +88,7 @@ sets:
   - set_number: MP22-PT056
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: YO01-JP001
     set_name: Yu-Gi-Oh! OCG Structures Volume 1 promotional card
