--- a/data/cards/93708824.yaml
+++ b/data/cards/93708824.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 十六夜蔷薇龙
 text:
   en: |-
-    If this card is Normal or Special Summoned: You can add 1 card that specifically lists "Black Rose Dragon" in its text, from your Deck to your hand, except "Roxrose Dragon". While this card is in your GY, if a face-up "Rose Dragon" monster(s) or Plant Synchro Monster(s) you control is destroyed by battle or an opponent's card effect: You can add this card to your hand. You can only use each effect of "Roxrose Dragon" once per turn.
+    If this card is Normal or Special Summoned: You can add 1 card that mentions "Black Rose Dragon" from your Deck to your hand, except "Roxrose Dragon". While this card is in your GY, if a face-up "Rose Dragon" monster(s) or Plant Synchro Monster(s) you control is destroyed by battle or an opponent's card effect: You can add this card to your hand. You can only use each effect of "Roxrose Dragon" once per turn.
   de: |-
     Falls diese Karte als Normal- oder Spezialbeschwörung beschworen wird: Du kannst deiner Hand 1 Karte, die ausdrücklich „Schwarzer Rosendrache“ in ihrem Text erwähnt, von deinem Deck hinzufügen, außer „Kastanien-Rosendrache“. Solange sich diese Karte in deinem Friedhof befindet, falls ein oder mehr offene „Rosendrache“-Monster oder Pflanze-Synchromonster, die du kontrolliert, durch Kampf oder einen Karteneffekt eines Gegners zerstört werden: Du kannst diese Karte deiner Hand hinzufügen. Du kannst jeden Effekt von „Kastanien-Rosendrache“ nur einmal pro Spielzug verwenden.
   es: |-
@@ -53,7 +53,7 @@ sets:
   - set_number: MP22-EN060
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: LIOV-DE009
     set_name: Lightning Overdrive
@@ -62,7 +62,7 @@ sets:
   - set_number: MP22-DE060
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: LIOV-FR009
     set_name: Lightning Overdrive
@@ -71,7 +71,7 @@ sets:
   - set_number: MP22-FR060
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: LIOV-IT009
     set_name: Lightning Overdrive
@@ -80,7 +80,7 @@ sets:
   - set_number: MP22-IT060
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: LIOV-PT009
     set_name: Lightning Overdrive
@@ -89,7 +89,7 @@ sets:
   - set_number: MP22-PT060
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: LIOV-JP009
     set_name: Lightning Overdrive
