--- a/data/cards/99243014.yaml
+++ b/data/cards/99243014.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 同调超车
 text:
   en: |-
-    Reveal 1 Synchro Monster in your Extra Deck, choose 1 of the Synchro Materials whose name is listed on that card, and add to your hand or Special Summon that monster, from your Deck or GY, also you cannot Special Summon monsters from the Extra Deck the turn you activate this card, except Synchro Monsters. You can only activate 1 "Synchro Overtake" per turn.
+    Reveal 1 Synchro Monster in your Extra Deck, choose 1 of the Synchro Materials mentioned on it, and add to your hand or Special Summon that monster, from your Deck or GY, also you cannot Special Summon monsters from the Extra Deck the turn you activate this card, except Synchro Monsters. You can only activate 1 "Synchro Overtake" per turn.
   de: |-
     Zeige 1 Synchromonster in deinem Extra Deck vor, bestimme 1 des Synchromaterials, dessen Name auf der Karte aufgeführt ist, und füge das Monster deiner Hand hinzu oder beschwöre es als Spezialbeschwörung von deinem Deck oder Friedhof, zusätzlich kannst du in dem Spielzug, in dem du diese Karte aktivierst, keine Monster als Spezialbeschwörung vom Extra Deck beschwören, außer Synchromonstern. Du kannst nur 1 „Synchro-Überholen“ pro Spielzug aktivieren.
   es: |-
