--- a/data/cards/99456344.yaml
+++ b/data/cards/99456344.yaml
@@ -56,7 +56,7 @@ sets:
   - set_number: MP22-EN124
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   de:
   - set_number: DAMA-DE007
     set_name: Dawn of Majesty
@@ -69,7 +69,7 @@ sets:
   - set_number: MP22-DE124
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   fr:
   - set_number: DAMA-FR007
     set_name: Dawn of Majesty
@@ -82,7 +82,7 @@ sets:
   - set_number: MP22-FR124
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   it:
   - set_number: DAMA-IT007
     set_name: Dawn of Majesty
@@ -95,7 +95,7 @@ sets:
   - set_number: MP22-IT124
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   pt:
   - set_number: DAMA-PT007
     set_name: Dawn of Majesty
@@ -108,7 +108,7 @@ sets:
   - set_number: MP22-PT124
     set_name: 2022 Tin of the Pharaoh's Gods
     rarities:
-    - PScR
+    - Prismatic Secret Rare
   ja:
   - set_number: DAMA-JP007
     set_name: Dawn of Majesty
